# templates-python

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  config.ini  config.template.ini  logging.ini  main.py  pyproject.toml  radon.cfg
components/: file1.py  file2.py  file3.py
kube/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  service.yaml
kube/overlays/production/: ingress.yaml  kustomization.yaml
src/my_package/: main.py
src/my_package/components/: file1.py  file2.py  file3.py
tests/: test_main.py
